--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
         "@auth0/auth0-spa-js": "^1.19.2",
         "@emotion/react": "^11.5.0",
         "@emotion/styled": "^11.3.0",
+        "@material-ui/core": "^4.12.4",
+        "@material-ui/icons": "^4.11.3",
         "@mui/icons-material": "^5.1.1",
         "@mui/lab": "^5.0.0-alpha.55",
         "@mui/material": "^5.0.6",
@@ -35,7 +37,7 @@
         "react-perfect-scrollbar": "^1.5.8",
         "react-redux": "^7.2.6",
         "react-router-dom": "^6.0.2",
-        "react-scripts": "^4.0.3",
+        "react-scripts": "^2.1.3",
         "react-scrollbars-custom": "^4.0.25",
         "redux": "^4.1.2",
         "redux-thunk": "^2.4.0",
